--- a/front/index.html
+++ b/front/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
 
-  <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="src/assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
     .bd-placeholder-img {
@@ -29,7 +29,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="src/assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
